--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build GLR Collector
 on:
   push:
     branches: [ "main" ]
-    tags: [ "v*" ] # Trigger ook bij tags zoals v1.0
+    tags: [ "v*" ]
   workflow_dispatch:
 
 jobs:
@@ -15,20 +15,19 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      # Stap 1: Installeer Platypus
+      # FIX: Gebruik --cask en maak de command-line tool expliciet beschikbaar
       - name: Install Platypus
-        run: brew install platypus
+        run: |
+          brew install --cask platypus
+          # Maak een symlink zodat 'platypus' als commando werkt
+          sudo ln -sf /Applications/Platypus.app/Contents/Resources/platypus_clt /usr/local/bin/platypus
 
-      # Stap 2: Converteer .ico naar .png (macOS snapt .ico niet goed)
-      # We gebruiken 'sips' (standaard macOS tool) om er een bruikbaar plaatje van te maken
       - name: Convert Icon
         run: sips -s format png app.ico --out appIcon.png
 
-      # Stap 3: Maak script uitvoerbaar
       - name: Prepare Script
         run: chmod +x assignment-collector.sh
 
-      # Stap 4: Bouw de App met Platypus
       - name: Build Application
         run: |
           platypus \
@@ -41,11 +40,9 @@ jobs:
             'assignment-collector.sh' \
             'GLR Collector.app'
 
-      # Stap 5: Zippen (Nodig om permissies te behouden)
       - name: Zip Application
         run: zip -r GLR_Collector.zip "GLR Collector.app"
 
-      # Stap 6: Upload als Artifact (Voor testen)
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
@@ -53,7 +50,6 @@ jobs:
           path: GLR_Collector.zip
           retention-days: 5
 
-      # Stap 7: Maak automatisch een Release aan (Alleen bij tags)
       - name: Create Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
